fix(auth): fixed visual bug on small screens

--- a/src/components/FormInput/FormInput.module.scss
+++ b/src/components/FormInput/FormInput.module.scss
@@ -68,4 +68,8 @@
   .input {
     width: 250px;
   }
+
+  .errorMsg {
+    max-width: 250px;
+  }
 }
